World Authentication + fixed bug in Packet::WriteString

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ add_dependencies(worldserver shared)
 target_link_libraries(worldserver shared)
 if(WIN32)
 	target_link_libraries(worldserver "${CMAKE_SOURCE_DIR}/3rdparty/openssl-3.1.1/lib/VC/static/libcrypto64MTd.lib" crypt32)
+	target_link_libraries(worldserver "${CMAKE_SOURCE_DIR}/3rdparty/libpqxx-7.7.5/lib/pqxx.lib")
+	target_link_libraries(worldserver "${CMAKE_SOURCE_DIR}/3rdparty/libpqxx-7.7.5/lib/libpq.lib")
 else()
 	target_link_libraries(worldserver ssl crypto)
 endif()
